--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
 <h1>Pages#home-Find a Venue</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+<%= link_to "Sign Up", new_user_registration_path %>
