--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,4 @@
 <p>Find me in app/views/pages/home.html.erb</p>
 
 <%= link_to "Sign Up", new_user_registration_path %>
+<%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %>
