All venue basic view flows complete

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -4,8 +4,11 @@
       <%= venue.name %>
     </div> 
     <div> 
-      <%= link_to "Find out more...", venue_path(venue), class: "btn btn-primary"%>
+      <%= link_to "Find out more...", venue_path(venue), class: "btn btn-secondary"%>
     </div> 
     <br>
     <% end %>
+
+    <%= link_to "List Venue", new_venue_path, class: "btn btn-primary" %>
+    <%# <%= link_to "View Your Listings (Doesn't work yet)", venues_path(current_user), class: "btn btn-warning" %>
 </div>
