--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,9 @@
-<h1>Pages#home-Find a Venue</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-
-<%= link_to "Sign Up", new_user_registration_path %>
-<%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %>
+<div class="container col-8">
+  <div class="d-flex align-items-center justify-content-between">
+    <h1>Find a Venue</h1>
+    <%= link_to "Venues", venues_path, class: "btn btn-primary" %>
+  </div>
+  
+  <%= link_to "Sign Up", new_user_registration_path %>
+  <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %>
+</div>
