Add routes, controllers and views for bookings

--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,17 +1,18 @@
 <div class="container col-8">
     <div>
       <h1><%= @venue.name %></h1>
-    </div> 
+    </div>
     <div>
         <p><%= @venue.address %></p>
         <p><%= @venue.description %></p>
-        <p>Capacity: <%=@venue.capacity %></p> 
+        <p>Capacity: <%=@venue.capacity %></p>
         <p>Price: €<%= @venue.price %></p>
-    </div> 
+    </div>
     <br>
 
     <div class="d-flex justify-content-between">
       <%= link_to "Edit Venue", edit_venue_path(@venue), class: "btn btn-warning" %>
       <%= link_to "Delete", venue_path(@venue), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "btn btn-secondary" %>
     </div>
+    <%= link_to "Book", new_venue_booking_path(@venue), class: "btn btn-primary" %>
 </div>
