phase 1 of reviews

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,4 +1,4 @@
-<h1><%= current_user.first_name %>`s Bookings</h1>
+<h1><%= current_user.first_name %>'s Bookings</h1>
 
 <% if @bookings.empty? %>
   <p>You have no bookings 😢 </p>
