--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -5,12 +5,15 @@
 
     <div>
       <% @reviews.each do |review| %>
-      <%= review.comment %>
+      <h5><%= review.title %></h5>
+      <p><%= review.comment %></p>
       <% end %>
     </div>
 
     <div class="d-flex justify-content-between">
       <%= link_to "Back to Venue", venue_path(@venue), class: "btn btn-primary" %>
-      <%= link_to "Leave a Review", new_venue_review_path(@venue), class: "btn btn-info" %>
+      <%# <% if current_user.bookings == @venue.id %>
+        <%= link_to "Leave a Review", new_venue_review_path(@venue), class: "btn btn-info" %>
+      <%# <% end %>
     </div>
 </div>
