Review views phase 1  including logic to show or not show depending on if you've had a booking

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -12,8 +12,8 @@
 
     <div class="d-flex justify-content-between">
       <%= link_to "Back to Venue", venue_path(@venue), class: "btn btn-primary" %>
-      <%# <% if current_user.bookings == @venue.id %>
+      <% if current_user.bookings.pluck(:venue_id).include?(@venue.id) %>
         <%= link_to "Leave a Review", new_venue_review_path(@venue), class: "btn btn-info" %>
-      <%# <% end %>
+      <% end %>
     </div>
 </div>
