--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,12 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "https://thenounproject.com/api/private/icons/2228292/edit/?backgroundShape=SQUARE&backgroundShapeColor=%23000000&backgroundShapeOpacity=0&exportSize=752&flipX=false&flipY=false&foregroundColor=%23000000&foregroundOpacity=1&imageFormat=png&rotation=0&token=gAAAAABj8Qy6DrlH_tS72zuG6RRtijaY0FFooZL9gXu1NJ4qu3qzhLgvUFKT_VKbdFmm4LU1iQZpvyGCrUk2NTtWQM-9XTzlDA%3D%3D" %>
-    <% end %>
+    <ul class="navbar-nav me-auto"> 
+      <li class="nav-item active">
+        <%= link_to "Home", root_path, class: "nav-link" %>
+      </li>
+    </ul>
+      <%# <%= image_tag "https://thenounproject.com/api/private/icons/2228292/edit/?backgroundShape=SQUARE&backgroundShapeColor=%23000000&backgroundShapeOpacity=0&exportSize=752&flipX=false&flipY=false&foregroundColor=%23000000&foregroundOpacity=1&imageFormat=png&rotation=0&token=gAAAAABj8Qy6DrlH_tS72zuG6RRtijaY0FFooZL9gXu1NJ4qu3qzhLgvUFKT_VKbdFmm4LU1iQZpvyGCrUk2NTtWQM-9XTzlDA%3D%3D" %>
+    <%# <% end %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -10,13 +14,10 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <%= link_to "All Venues", venues_path, class: "nav-link" %>
+        </li>
         <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", root_path, class: "nav-link" %>
-
-
-
-          </li>
           <li class="nav-item">
             <%= link_to "My Venues", my_venues_venues_path, class: "nav-link" %>
           </li>
