--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex">
-  <div class="container m-2">
+  <div class="container m-2 justify-content-center">
         <% @venues.each do |venue| %>
         <div class="bg-light col-12">
           <div class="p-2 mb-2">
