--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -9,12 +9,14 @@
         <p>Price: €<%= @venue.price %></p>
     </div>
     <br>
+    <% if @venue.user == current_user %>
+      <div class="d-flex justify-content-between">
+        <%= link_to "Edit Venue", edit_venue_path(@venue), class: "btn btn-warning" %>
+        <%= link_to "Delete", venue_path(@venue), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "btn btn-secondary" %>
+      </div>
+      <br> 
+    <% end %>
 
-    <div class="d-flex justify-content-between">
-      <%= link_to "Edit Venue", edit_venue_path(@venue), class: "btn btn-warning" %>
-      <%= link_to "Delete", venue_path(@venue), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "btn btn-secondary" %>
-    </div>
-    <br> 
     <div class="d-flex justify-content-between">
       <%= link_to "Book", new_venue_booking_path(@venue), class: "btn btn-primary" %>
       <%= link_to "See Reviews", venue_reviews_path(@venue), class: "btn btn-info" %>
