updated home page to show data when logged out

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -9,7 +9,7 @@
       <p><%= review.comment %></p>
       <p>
         <strong>Posted at: </strong><%= Booking.find(review.booking_id).created_at.strftime("%H:%S (%B %d, %Y)") %>
-        - by: 
+        - by:
         <%= User.find(Booking.find(review.booking_id).user_id).first_name %>
         <%= User.find(Booking.find(review.booking_id).user_id).last_name %>
       </p>
@@ -18,7 +18,7 @@
 
     <div class="d-flex justify-content-between">
       <%= link_to "Back to Venue", venue_path(@venue), class: "btn btn-primary" %>
-      <% if current_user.bookings.pluck(:venue_id).include?(@venue.id) %>
+      <% if current_user.present? && current_user.bookings.pluck(:venue_id).include?(@venue.id) %>
         <%= link_to "Leave a Review", new_venue_review_path(@venue), class: "btn btn-info" %>
       <% end %>
     </div>
