--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,19 @@
 <div class="container col-8">
   <div class="d-flex align-items-center justify-content-between">
-    <h1>Find a Venue</h1>
-    <%= link_to "Venues", venues_path, class: "btn btn-primary" %>
+    <h1>Welcome to Find Venue</h1>
   </div>
-  
-  <%= link_to "Sign Up", new_user_registration_path %>
-  <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %>
+
+
+  <div class="container">
+    <p1>Website created by Ronan, Jan and Jaro that will allow you to rent a venue.</p1>
+      <% @venues.last(6).each do |venue| %>
+      <div>
+        <%= venue.name %>
+      </div>
+      <div>
+        <%= link_to "Find out more...", venue_path(venue), class: "btn btn-secondary"%>
+      </div>
+      <br>
+      <% end %>
+  </div>
 </div>
