--- a/app/views/venues/edit.html.erb
+++ b/app/views/venues/edit.html.erb
@@ -1,8 +1,13 @@
 <div class="container">
-
-  <h1>Edit: <%= @venue.name %></h1>
-
-  <%= render 'form', venue: @venue %>
-
-  <%= link_to "Return to Venues", venues_path %>
+  <div class="bg-light p-3">
+    <div class="col-8">
+      <h1>Edit: <%= @venue.name %></h1>  
+    </div>
+    <div class="mb-2">
+      <%= render 'form', venue: @venue %>
+    </div>
+    <div class="d-flex justify-content-end mt-3">
+      <%= link_to "Return to Venues", venues_path, class: "btn btn-primary" %>
+    </div>
+  </div>
 </div>
