--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <ul class="navbar-nav me-auto"> 
+    <ul class="navbar-nav me-auto">
       <li class="nav-item active">
         <%= link_to "Home", root_path, class: "nav-link" %>
       </li>
@@ -29,12 +29,11 @@
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Action", "#", class: "dropdown-item" %>
               <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", "#", class: "dropdown-item", data: {turbo_method: :delete} %>
+              <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: :delete} %>
             </div>
           </li>
         <% else %>
           <!--li class="nav-item"-->
-            <%= link_to "Home", root_path, class: "nav-link" %>
             <%= link_to "Login", new_user_session_path, class: "nav-link" %>
 
           <!--/li-->
