--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -11,6 +11,9 @@
           <p>Start date: <em><%= booking.booking_start_date.strftime("%d %b, %Y") %></em></p>
           <p>End date: <em><%= booking.booking_end_date.strftime("%d %b, %Y") %></em></p>
         </div>
+        <div>
+          <%= link_to "Cancel Booking", venue_path(booking.venue), class: "btn btn-warning" %>
+        </div>
       </li>
     <% end %>
     </ol>
