hiding leave a review on own property and Book on own venue

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -18,8 +18,14 @@
 
     <div class="d-flex justify-content-between">
       <%= link_to "Back to Venue", venue_path(@venue), class: "btn btn-primary" %>
-      <% if current_user.present? && current_user.bookings.pluck(:venue_id).include?(@venue.id) %>
-        <%= link_to "Leave a Review", new_venue_review_path(@venue), class: "btn btn-info" %>
-      <% end %>
+      <% unless @venue.user == current_user %>
+        <% if current_user.present? && current_user.bookings.pluck(:venue_id).include?(@venue.id) %>
+          <%= link_to "Leave a Review", new_venue_review_path(@venue), class: "btn btn-info" %>
+        <% end %>
+      <% end  %>
     </div>
 </div>
+
+      
+        
+      
