--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -18,7 +18,9 @@
     <% end %>
 
     <div class="d-flex justify-content-between">
-      <%= link_to "Book", new_venue_booking_path(@venue), class: "btn btn-primary" %>
+      <% unless @venue.user == current_user %>
+        <%= link_to "Book", new_venue_booking_path(@venue), class: "btn btn-primary" %>
+      <% end  %>
       <%= link_to "See Reviews", venue_reviews_path(@venue), class: "btn btn-info" %>
     </div>
 </div>
