--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,26 +1,18 @@
-<div class="container col-8">
-  <div class="d-flex align-items-center justify-content-between">
-    <h1>Welcome to Find Venue</h1>
-  </div>
-
-
-  <div class="container">
-    <p>Website created by Ronan, Jan and Jaro that will allow you to rent a venue.</p>
-      <% @venues.last(6).each do |venue| %>
-      <div>
-        <%= venue.name %>
-      </div>
-      <div>
-        <%= link_to "Find out more...", venue_path(venue), class: "btn btn-secondary"%>
-      </div>
-      <br>
-      <% end %>
-    <% if user_signed_in? %>
-        <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %>
-      <% else %>
-        <%= link_to "Sign Up", new_user_registration_path %>
-      <% end %>
-
-  </div>
+<div class="banner">
+    <h1>Venue Finder</h1>
+    <%= link_to "Venues", venues_path, class: "btn btn-primary m-1" %>
 </div>
 
+
+<div class="container home_page col-12">
+
+  <div class="text">
+    <p>Welcome to our marketplace website, where you can easily book a venue for your next event! Our website is the result of the hard work and collaboration of Jan, Ronan, and Jaroslav, who have developed it as part of the Le Wagon part-time Web Development bootcamp.</p>
+    <p>Our website offers a user-friendly interface that allows you to search for venues based on various criteria such as location, size and price range. You can also filter your search results to show only the venues that meet your specific requirements.</p>
+    <p>Once you have found a venue that you like, you can easily book it through our website. We offer a secure payment system that allows you to pay for your reservation using your preferred method of payment.</p>
+    <p>Whether you are planning a small gathering or a large-scale event, our marketplace website has everything you need to make your event a success. So why wait? Start browsing our listings today and find the perfect venue for your next event!</p>
+  </div>
+
+
+
+</div>
