minor changes to banner

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="banner">
     <h1>Venue Finder</h1>
-    <%= link_to "Venues", venues_path, class: "btn btn-primary m-1" %>
+    <%= link_to "Venues", venues_path, class: "btn btn-primary button_margin" %>
 </div>
 
 
