--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -6,10 +6,10 @@
             <div>
             <h2><%= venue.name %></h2>
             </div>
-            <div class="d-flex justify-content-between"> 
+            <div class="d-flex justify-content-between">
               <p><%= venue.description %></p>
               <%= link_to "Find out more...", venue_path(venue), class: "btn btn-secondary align-self-start"%>
-            </div> 
+            </div>
           </div>
         </div>
         <% end %>
@@ -18,4 +18,19 @@
     <%= link_to "List Venue", new_venue_path, class: "btn btn-primary m-1" %>
     <%# <%= link_to "View Your Listings (Doesn't work yet)", venues_path(current_user), class: "btn btn-warning" %>
   </div>
+</div>
+
+<div class="venues">
+  <%# <div class="container"> %>
+    <div class="cards">
+      <% @venues.each do |venue| %>
+      <div class="card">
+        <%= link_to image_tag("https://source.unsplash.com/random/?venue"), venue_path(venue) %>
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+      <% end %>
+    </div>
+  <%# </div> %>
 </div>
