changed List venue to Register venue

--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="bg-light p-3">
     <div class="col-8">
-      <h1>List New Venue</h1>  
+      <h1>Register New Venue</h1>
     </div>
     <div class="mb-2">
       <%= render 'form', venue: @venue %>
@@ -11,4 +11,3 @@
     </div>
   </div>
 </div>
- 
