--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -6,16 +6,16 @@
             <div>
             <h2><%= venue.name %></h2>
             </div>
-            <div class="d-flex justify-content-between"> 
+            <div class="d-flex justify-content-between">
               <p><%= venue.description %></p>
               <%= link_to "Find out more...", venue_path(venue), class: "btn btn-secondary align-self-start"%>
-            </div> 
+            </div>
           </div>
         </div>
         <% end %>
   </div>
   <div class="col-3 p-2">
-    <%= link_to "List Venue", new_venue_path, class: "btn btn-primary m-1" %>
+    <%= link_to "Register Venue", new_venue_path, class: "btn btn-primary m-1" %>
     <%# <%= link_to "View Your Listings (Doesn't work yet)", venues_path(current_user), class: "btn btn-warning" %>
   </div>
 </div>
