Update Gemfile.lock to add pg_search dependency, add search form to venues index, and add pg_search scope to Venue model.

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,4 +1,13 @@
 <div class="venues">
+
+  <%= form_with url: venues_path, method: :get, class: "d-flex" do %>
+    <%= text_field_tag :query,
+      params[:query],
+      class: "form-control"
+    %>
+    <%= submit_tag "Search", class: "btn btn-primary" %>
+  <% end %>
+
     <div class="cards">
       <% @venues.each do |venue| %>
       <div class="card">
