Update styling for venues page and application.scss, add search field to venues page

--- a/app/assets/stylesheets/pages/_venues.scss
+++ b/app/assets/stylesheets/pages/_venues.scss
@@ -1,5 +1,10 @@
 .venues {
-  background-color: white;
+  .search {
+    width: 400px;
+    .form-control {
+      background-color: white;
+    }
+  }
   .cards {
     width: 1200px;
     max-width: 80%;
