--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -1,13 +1,11 @@
 <div class="container">
   <div class="bg-light p-3">
-    <div class="col-8">
-      <h1>Register New Venue</h1>
-    </div>
+      <h1 class="text-center">Add New Venue</h1>
     <div class="mb-2">
       <%= render 'form', venue: @venue %>
     </div>
     <div class="d-flex justify-content-end mt-3">
-      <%= link_to "Return to Venues", venues_path, class: "btn btn-primary" %>
+      <%= link_to "Return to Venues", venues_path, class: "btn btn-secondary" %>
     </div>
   </div>
 </div>
