--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -10,19 +10,38 @@
   </div>
   <div class="cards">
     <% @venues.each do |venue| %>
-    <div class="card">
-      <% if venue.photos.attached? %>
-        <%= link_to cl_image_tag(venue.photos.first.key, class: "card-img-top", height: 250, crop: :fill), venue_path(venue) %>
-      <% else %>
-        <%= link_to cl_image_tag("https://res.cloudinary.com/dtke2msby/image/upload/v1677529280/development/venue_img_placeholder_mtmrus.jpg", class: "card-img-top", height: 250, crop: :fill), venue_path(venue)%>
-      <% end %>
-      <div class="card-body px-0">
-        <h2><%= venue.name %></h2>
-        <p class="fw-lighter">
-          <%= venue.available_start_date.strftime("%d %b") %> - <%= venue.available_end_date.strftime("%d %b") %>
-        </p>
-        <p>Capacity: <%=venue.capacity %></p>
-        <p class="fw-semibold">€ <%= venue.price %> day</p>
+    <div class="">
+      <div class="card">
+        <% if venue.photos.attached? %>
+          <%= link_to cl_image_tag(venue.photos.first.key, class: "card-img-top", height: 250, crop: :fill), venue_path(venue) %>
+        <% else %>
+          <%= link_to cl_image_tag("https://res.cloudinary.com/dtke2msby/image/upload/v1677529280/development/venue_img_placeholder_mtmrus.jpg", class: "card-img-top", height: 250, crop: :fill), venue_path(venue)%>
+        <% end %>
+        <div class="card-title">
+          <h2>
+            <%= venue.name %>
+          </h2>
+        </div>
+        <div class="d-flex bottom-left">
+          <i class="fa-solid fa-people-group me-2 align-self-center"></i>
+          <p class="my-auto"> <%=venue.capacity %> </p>
+        </div>
+      </div>
+
+      <div class="card-body px-0 mt-2">
+        <h6><%= venue.city %>, <%= venue.country %> </h6>
+        <div class="d-flex fw-semibold justify-content-between">
+          <div class="d-flex">
+            <p>€<%= venue.price %> </p>
+            <p class="fw-light text-muted ms-2">/ day</p>
+          </div>
+          <div>
+            <p class="fw-lighter">
+              <%= venue.available_start_date.strftime("%d %b") %> - <%= venue.available_end_date.strftime("%d %b") %>
+            </p>
+          </div>
+        </div>
+
       </div>
     </div>
     <% end %>
