formatting of date on card

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -36,7 +36,7 @@
             <p class="fw-light text-muted ms-2">/ day</p>
           </div>
           <div>
-            <p class="fw-lighter">
+            <p class="fw-lighter text-muted">
               <%= venue.available_start_date.strftime("%d %b") %> - <%= venue.available_end_date.strftime("%d %b") %>
             </p>
           </div>
