--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,26 +1,30 @@
 <div class="container col-8">
-    <div>
-      <h1><%= @venue.name %></h1>
-    </div>
-    <div>
-        <p><%= @venue.address %></p>
-        <p><%= @venue.description %></p>
-        <p>Capacity: <%=@venue.capacity %></p>
-        <p>Price: €<%= @venue.price %></p>
-    </div>
-    <br>
-    <% if @venue.user == current_user %>
-      <div class="d-flex justify-content-between">
-        <%= link_to "Edit Venue", edit_venue_path(@venue), class: "btn btn-warning" %>
-        <%= link_to "Delete", venue_path(@venue), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "btn btn-secondary" %>
+  <div class="card-trip">
+    <img src="https://source.unsplash.com/random/?venue" />
+    <div class="card-trip-infos">
+      <div>
+        <h2><%= @venue.name %></h2>
+        <p>Description: <%= @venue.description %></p>
+        <p>Capacity: <%= @venue.capacity %></p>
+
       </div>
-      <br> 
+        <h2 class="card-trip-pricing">Price: €<%= @venue.price %></p></h2>
+      <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+    </div>
+
+    <% if @venue.user == current_user %>
+        <div class="d-flex justify-content-between card-trip-infos">
+          <%= link_to "Edit Venue", edit_venue_path(@venue), class: "btn btn-warning" %>
+          <%= link_to "Delete", venue_path(@venue), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "btn btn-secondary" %>
+        </div>
+        <br>
     <% end %>
 
-    <div class="d-flex justify-content-between">
-      <% unless @venue.user == current_user %>
-        <%= link_to "Book", new_venue_booking_path(@venue), class: "btn btn-primary" %>
-      <% end  %>
-      <%= link_to "See Reviews", venue_reviews_path(@venue), class: "btn btn-info" %>
-    </div>
+    <div class="d-flex justify-content-between card-trip-infos">
+        <%= link_to "See Reviews", venue_reviews_path(@venue), class: "btn btn-info" %>
+        <% unless @venue.user == current_user %>
+          <%= link_to "Book", new_venue_booking_path(@venue), class: "btn btn-primary" %>
+        <% end  %>
+      </div>
+  </div>
 </div>
