--- a/app/assets/stylesheets/pages/_venues.scss
+++ b/app/assets/stylesheets/pages/_venues.scss
@@ -18,11 +18,13 @@
       border-style: none;
       img {
         border-radius: 5px;
-
       }
       h2 {
-        font-size: 20px;
+        font-size: 18px;
         font-weight: bold;
+        color: white;
+        width: 200px;
+        text-align: center;
       }
       p {
         font-size: 15px;
