Add color-white class and styling, and update venue name in index.html.erb

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -19,12 +19,12 @@
         <% end %>
         <div class="card-title">
           <h2>
-            <%= venue.name %>
+            <%# <%= venue.name %>
           </h2>
         </div>
         <div class="d-flex bottom-left">
-          <i class="fa-solid fa-people-group me-2 align-self-center"></i>
-          <p class="my-auto"> <%=venue.capacity %> </p>
+          <i class="fa-solid fa-people-group me-2 align-self-center color-white"></i>
+          <p class="my-auto color-white"> <%=venue.capacity %> </p>
         </div>
       </div>
 
