--- a/app/assets/stylesheets/pages/_venues.scss
+++ b/app/assets/stylesheets/pages/_venues.scss
@@ -30,11 +30,16 @@
         font-size: 15px;
       }
 
+      .color-white {
+        color: white;
+        text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+      }
       .card-title {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+
       }
 
       .bottom-left {
