--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -1,6 +1,8 @@
-<div class="container">
+<div class="container venue-form-style mt-3">
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dtke2msby/image/upload/v1677522523/development/33jxpvo3g4jrtutjostymxz4z9ge.jpg)">
+          New Venue
+  </div>
   <div class="bg-light p-3">
-      <h1 class="text-center">Add New Venue</h1>
     <div class="mb-2">
       <%= render 'form', venue: @venue %>
     </div>
