--- a/app/assets/stylesheets/components/_venue_form.scss
+++ b/app/assets/stylesheets/components/_venue_form.scss
@@ -1,3 +1,28 @@
 .form-label, .form-control {
   margin-bottom: 5px;
 }
+
+.w-longer {
+  width: 300px;
+}
+
+.venue-form-style {
+  width: 900px;
+}
+
+.card-category {
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 180px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  margin: 0 auto;
+}
