--- a/app/views/venues/_form.html.erb
+++ b/app/views/venues/_form.html.erb
@@ -1,10 +1,38 @@
 <%= form_for @venue do |f| %>
-  <%= f.label :name, class: "form-label" %>:
-  <%= f.text_field :name, class: "form-control" %>
+  <div class="d-flex">
+    <div class="">
+      <%= f.label :name, class: "form-label" %>:
+      <%= f.text_field :name, class: "form-control" %>
+    </div>
+     <div class="px-3">
+      <%= f.label "Venue type:", class: "form-label" %>
+      <%= f.text_field :building, class: "form-control", list: "datalistOptions", placeholder: "Type to search..." %>
+      <datalist id="datalistOptions">
+        <option value="Hotel">
+        <option value="Restaurant">
+        <option value="Conference Center">
+        <option value="Social Club">
+        <option value="Country Club">
+        <option value="Exhibition Venue">
+        <option value="Business Center">
+      </datalist>
+    </div>
+  </div>
 
-
-  <%= f.label :address, class: "form-label" %>:
-  <%= f.text_field :address, class: "form-control" %>
+   <div class="d-flex align-items-center">
+    <div class="">
+      <%= f.label :address, class: "form-label" %>:
+      <%= f.text_field :address, class: "form-control w-longer" %>
+    </div>
+    <div class="px-3">
+      <%= f.label :city, class: "form-label" %>:
+      <%= f.text_field :city, class: "form-control" %>
+    </div>
+     <div class="">
+      <%= f.label :country, class: "form-label" %>:
+      <%= f.text_field :country, class: "form-control" %>
+    </div>
+   </div>
 
   <%= f.label :description, class: "form-label" %>:
   <%= f.text_area :description, class: "form-control", rows: "3", placeholder: "Min. 6 characters" %>
