--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,9 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar sticky-top navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
     <ul class="navbar-nav me-auto">
-      <li class="nav-item active">
-        <%= link_to "Venue Finder", root_path, class: "nav-link" %>
+      <li class="d-flex nav-item active">
+        <h5 class="text-black fw-semibold my-auto">Venue</h5>
+        <h5 class="fw-semibold my-auto"><%= link_to "finder", root_path, class: "nav-link p-0 my-auto" %></h5>
       </li>
     </ul>
 
