--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,13 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' %>
-    <p class="alert"><%= alert %></p>
+    <main>
+      <%= render 'shared/navbar' %>
+      <p class="alert"><%= alert %></p>
+    
 
-
-
-    <%= yield %>
+      <%= yield %>
+    </main>
+    <%= render 'shared/footer' %>
   </body>
 </html>
