--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container col-4 mt-5">
 
-  <h1>Create New Booking: <%= @venue.name %></h1>
-
+  <h1>Create Booking: <%= @venue.name %></h1>
+  <br>
   <%= render 'form', booking: @booking %>
 </div>
