--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,13 +1,22 @@
 <div class="venues">
-  <div class="search my-5 container col-4">
-    <%= form_with url: venues_path, method: :get, class: "d-flex" do %>
-      <%= text_field_tag :query,
-        params[:query],
-        class: "form-control"
-      %>
-      <%= submit_tag "Search", class: "btn btn-primary" %>
-    <% end %>
+
+  <div class="container col-8">
+      <%= form_with url: venues_path, method: :get do %>
+      <div class="search my-5">
+          <div class="d-flex mx-auto col-5">
+            <%= 
+              text_field_tag :query,
+              params[:query],
+              class: "form-control"
+            %>
+            <div class="ms-2">
+              <%= submit_tag "Search", class: "btn btn-primary" %>
+            </div>
+          </div>
+      </div>
+      <% end %>
   </div>
+
   <div class="cards">
     <% @venues.each do |venue| %>
     <div class="">
