--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -7,7 +7,7 @@
       <%= render 'form', venue: @venue %>
     </div>
     <div class="d-flex justify-content-end mt-3">
-      <%= link_to "Return to Venues", venues_path, class: "btn btn-secondary" %>
+      <%= link_to "Back to Venues", venues_path, class: "btn btn-secondary" %>
     </div>
   </div>
 </div>
