--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -10,7 +10,7 @@
               class: "form-control"
             %>
             <div class="ms-2">
-              <%= submit_tag "Search", class: "btn btn-primary" %>
+              <%= submit_tag "Search", class: "btn btn-secondary" %>
             </div>
           </div>
       </div>
