--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <h1>Put on your best show</h1>
     <p class="px-2">Create unforgettable experiences for your fans at <strong>Venuefinder's</strong> unique locations</p>
 
-    <%= link_to "Find Venues", venues_path, class: "btn btn-primary button_margin" %>
+    <%= link_to "Find Venues", venues_path, class: "btn btn-light button_margin" %>
   </div>
 </div>
 
@@ -27,7 +27,7 @@
               class: "form-control"
             %>
             <div class="ms-2">
-              <%= submit_tag "Search", class: "btn btn-primary" %>
+              <%= submit_tag "Search", class: "btn btn-secondary" %>
             </div>
           </div>
       </div>
@@ -40,18 +40,18 @@
   <div class="d-flex my-5 justify-content-between align-items-center">
     <%= image_tag("small_venue.jpeg")%>
     <div class="p-4">
-      <h2>Find a Venue</h2>
-      <p class="text-secondary">Browse a list of the most inspiring venues on the planet</p>
-      <%= link_to "All Venues", venues_path, class: "btn btn-primary"%>
+      <h2>Add a Venue</h2>
+      <p class="text-secondary">If you own a unique setting, share it with the world...</p>
+      <%= link_to "Add Venue", new_venue_path, class: "btn btn-secondary"%>
     </div>
   </div>
   <br>
 
   <div class="d-flex my-5 justify-content-between align-items-center">
     <div class="p-4">
-      <h2>Add a Venue</h2>
-      <p class="text-secondary">If you own a unique setting, share it with the world...</p>
-      <%= link_to "Add venue", new_venue_path, class: "btn btn-primary"%>
+      <h2>Find a Venue</h2>
+      <p class="text-secondary">Browse a list of the most inspiring venues on the planet</p>
+      <%= link_to "All venues", venues_path, class: "btn btn-secondary"%>
     </div>
     <%= image_tag("unique_venue.jpeg")%>
   </div>
